--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   "homepage": "https://github.com/karimsa/type-check#readme",
   "devDependencies": {
     "ava": "^0.25.0",
+    "codecov": "^3.0.0",
     "nyc": "^11.4.1",
     "standardx": "^1.0.3"
   },
   "dependencies": {
-    "codecov": "^3.0.0"
+    "type-detect": "^4.0.8"
   }
 }
